OESE-258 fix missing alt text and overlapping carousel button with caption

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -66,6 +66,8 @@
 .nalrc-slider  #oese-acf-slider .oese-acf-slider-wrapper { margin-bottom:0; }
 .nalrc-slider #oese-acf-slider .oese-acf-slider-wrapper { top:0;right:0;bottom:0;left:0; }
 .nalrc-banner .nalrc-slider { flex-basis: 80%; max-width: 80%; padding-right: 0; }
+#oese-acf-slider ul.bullet-list.nalrc-list.wCaption { bottom:0; }
+#oese-acf-slider .wCaption .slide-content h3 { padding-bottom:20px !important; }
 /** NALRC Resource Styles **/
 .nalrc-main { margin:30px 0; padding:0 15px; }
 .nalrc-main #sngl-resource { flex-direction:column; display:flex; }
@@ -135,7 +137,17 @@
 /** End of NALRC Resources Styles **/
 /** Responsive Styles **/
 @media only screen and (max-width:1050px){
+	.nalrc-banner .nalrc-nav { 
+		max-width:25%;
+		flex-basis:25%;
+		height:auto;
+	}
+	.nalrc-banner nav li a { font-size:14px; }
 	.nalrc-header .nalrc-wrapper img { max-width:100%; width:100%; }
+	.nalrc-banner .nalrc-slider {
+		max-width:75%;
+		flex-basis: 75%;
+	}
 }
 @media only screen and (max-width:960px){
 	.nalrc-banner .nalrc-nav { 
@@ -179,6 +191,7 @@
 	    border-bottom: 1px solid #d1d1d1;
 	    flex-basis: 100%;
 	}
+	.nalrc-slider #oese-acf-slider { height:280px; }
 }
 @media only screen and (max-width:768px){
 	.nalrc-wrapper { padding:15px; }
